NULL =

public_icons_themes = \
	hicolor	\
	$(NULL)

public_icons = \
	hicolor_apps_16x16_kdeneur.png \
	hicolor_apps_22x22_kdeneur.png \
	hicolor_apps_24x24_kdeneur.png \
	hicolor_apps_32x32_kdeneur.png \
	hicolor_apps_48x48_kdeneur.png \
	hicolor_apps_scalable_kdeneur.svg \
	hicolor_apps_16x16_kdeneur-am.png \
	hicolor_apps_22x22_kdeneur-am.png \
	hicolor_apps_24x24_kdeneur-am.png \
	hicolor_apps_32x32_kdeneur-am.png \
	hicolor_apps_48x48_kdeneur-am.png \
	hicolor_apps_scalable_kdeneur-am.svg \
	hicolor_apps_16x16_kdeneur-bg.png \
	hicolor_apps_22x22_kdeneur-bg.png \
	hicolor_apps_24x24_kdeneur-bg.png \
	hicolor_apps_32x32_kdeneur-bg.png \
	hicolor_apps_48x48_kdeneur-bg.png \
	hicolor_apps_scalable_kdeneur-bg.svg \
	hicolor_apps_16x16_kdeneur-by.png \
	hicolor_apps_22x22_kdeneur-by.png \
	hicolor_apps_24x24_kdeneur-by.png \
	hicolor_apps_32x32_kdeneur-by.png \
	hicolor_apps_48x48_kdeneur-by.png \
	hicolor_apps_scalable_kdeneur-by.svg \
	hicolor_apps_16x16_kdeneur-cz.png \
	hicolor_apps_22x22_kdeneur-cz.png \
	hicolor_apps_24x24_kdeneur-cz.png \
	hicolor_apps_32x32_kdeneur-cz.png \
	hicolor_apps_48x48_kdeneur-cz.png \
	hicolor_apps_scalable_kdeneur-cz.svg \
	hicolor_apps_16x16_kdeneur-de.png \
	hicolor_apps_22x22_kdeneur-de.png \
	hicolor_apps_24x24_kdeneur-de.png \
	hicolor_apps_32x32_kdeneur-de.png \
	hicolor_apps_48x48_kdeneur-de.png \
	hicolor_apps_scalable_kdeneur-de.svg \
	hicolor_apps_16x16_kdeneur-ee.png \
	hicolor_apps_22x22_kdeneur-ee.png \
	hicolor_apps_24x24_kdeneur-ee.png \
	hicolor_apps_32x32_kdeneur-ee.png \
	hicolor_apps_48x48_kdeneur-ee.png \
	hicolor_apps_scalable_kdeneur-ee.svg \
	hicolor_apps_16x16_kdeneur-en.png \
	hicolor_apps_22x22_kdeneur-en.png \
	hicolor_apps_24x24_kdeneur-en.png \
	hicolor_apps_32x32_kdeneur-en.png \
	hicolor_apps_48x48_kdeneur-en.png \
	hicolor_apps_scalable_kdeneur-en.svg \
	hicolor_apps_16x16_kdeneur-es.png \
	hicolor_apps_22x22_kdeneur-es.png \
	hicolor_apps_24x24_kdeneur-es.png \
	hicolor_apps_32x32_kdeneur-es.png \
	hicolor_apps_48x48_kdeneur-es.png \
	hicolor_apps_scalable_kdeneur-es.svg \
	hicolor_apps_16x16_kdeneur-fi.png \
	hicolor_apps_22x22_kdeneur-fi.png \
	hicolor_apps_24x24_kdeneur-fi.png \
	hicolor_apps_32x32_kdeneur-fi.png \
	hicolor_apps_48x48_kdeneur-fi.png \
	hicolor_apps_scalable_kdeneur-fi.svg \
	hicolor_apps_16x16_kdeneur-fr.png \
	hicolor_apps_22x22_kdeneur-fr.png \
	hicolor_apps_24x24_kdeneur-fr.png \
	hicolor_apps_32x32_kdeneur-fr.png \
	hicolor_apps_48x48_kdeneur-fr.png \
	hicolor_apps_scalable_kdeneur-fr.svg \
	hicolor_apps_16x16_kdeneur-ge.png \
	hicolor_apps_22x22_kdeneur-ge.png \
	hicolor_apps_24x24_kdeneur-ge.png \
	hicolor_apps_32x32_kdeneur-ge.png \
	hicolor_apps_48x48_kdeneur-ge.png \
	hicolor_apps_scalable_kdeneur-ge.svg \
	hicolor_apps_16x16_kdeneur-gr.png \
	hicolor_apps_22x22_kdeneur-gr.png \
	hicolor_apps_24x24_kdeneur-gr.png \
	hicolor_apps_32x32_kdeneur-gr.png \
	hicolor_apps_48x48_kdeneur-gr.png \
	hicolor_apps_scalable_kdeneur-gr.svg \
	hicolor_apps_16x16_kdeneur-hr.png \
	hicolor_apps_22x22_kdeneur-hr.png \
	hicolor_apps_24x24_kdeneur-hr.png \
	hicolor_apps_32x32_kdeneur-hr.png \
	hicolor_apps_48x48_kdeneur-hr.png \
	hicolor_apps_scalable_kdeneur-hr.svg \
	hicolor_apps_16x16_kdeneur-hu.png \
	hicolor_apps_22x22_kdeneur-hu.png \
	hicolor_apps_24x24_kdeneur-hu.png \
	hicolor_apps_32x32_kdeneur-hu.png \
	hicolor_apps_48x48_kdeneur-hu.png \
	hicolor_apps_scalable_kdeneur-hu.svg \
	hicolor_apps_16x16_kdeneur-is.png \
	hicolor_apps_22x22_kdeneur-is.png \
	hicolor_apps_24x24_kdeneur-is.png \
	hicolor_apps_32x32_kdeneur-is.png \
	hicolor_apps_48x48_kdeneur-is.png \
	hicolor_apps_scalable_kdeneur-is.svg \
	hicolor_apps_16x16_kdeneur-it.png \
	hicolor_apps_22x22_kdeneur-it.png \
	hicolor_apps_24x24_kdeneur-it.png \
	hicolor_apps_32x32_kdeneur-it.png \
	hicolor_apps_48x48_kdeneur-it.png \
	hicolor_apps_scalable_kdeneur-it.svg \
	hicolor_apps_16x16_kdeneur-kz.png \
	hicolor_apps_22x22_kdeneur-kz.png \
	hicolor_apps_24x24_kdeneur-kz.png \
	hicolor_apps_32x32_kdeneur-kz.png \
	hicolor_apps_48x48_kdeneur-kz.png \
	hicolor_apps_scalable_kdeneur-kz.svg \
	hicolor_apps_16x16_kdeneur-lt.png \
	hicolor_apps_22x22_kdeneur-lt.png \
	hicolor_apps_24x24_kdeneur-lt.png \
	hicolor_apps_32x32_kdeneur-lt.png \
	hicolor_apps_48x48_kdeneur-lt.png \
	hicolor_apps_scalable_kdeneur-lt.svg \
	hicolor_apps_16x16_kdeneur-lv.png \
	hicolor_apps_22x22_kdeneur-lv.png \
	hicolor_apps_24x24_kdeneur-lv.png \
	hicolor_apps_32x32_kdeneur-lv.png \
	hicolor_apps_48x48_kdeneur-lv.png \
	hicolor_apps_scalable_kdeneur-lv.svg \
	hicolor_apps_16x16_kdeneur-no.png \
	hicolor_apps_22x22_kdeneur-no.png \
	hicolor_apps_24x24_kdeneur-no.png \
	hicolor_apps_32x32_kdeneur-no.png \
	hicolor_apps_48x48_kdeneur-no.png \
	hicolor_apps_scalable_kdeneur-no.svg \
	hicolor_apps_16x16_kdeneur-pl.png \
	hicolor_apps_22x22_kdeneur-pl.png \
	hicolor_apps_24x24_kdeneur-pl.png \
	hicolor_apps_32x32_kdeneur-pl.png \
	hicolor_apps_48x48_kdeneur-pl.png \
	hicolor_apps_scalable_kdeneur-pl.svg \
	hicolor_apps_16x16_kdeneur-pt.png \
	hicolor_apps_22x22_kdeneur-pt.png \
	hicolor_apps_24x24_kdeneur-pt.png \
	hicolor_apps_32x32_kdeneur-pt.png \
	hicolor_apps_48x48_kdeneur-pt.png \
	hicolor_apps_scalable_kdeneur-pt.svg \
	hicolor_apps_16x16_kdeneur-ro.png \
	hicolor_apps_22x22_kdeneur-ro.png \
	hicolor_apps_24x24_kdeneur-ro.png \
	hicolor_apps_32x32_kdeneur-ro.png \
	hicolor_apps_48x48_kdeneur-ro.png \
	hicolor_apps_scalable_kdeneur-ro.svg \
	hicolor_apps_16x16_kdeneur-ru.png \
	hicolor_apps_22x22_kdeneur-ru.png \
	hicolor_apps_24x24_kdeneur-ru.png \
	hicolor_apps_32x32_kdeneur-ru.png \
	hicolor_apps_48x48_kdeneur-ru.png \
	hicolor_apps_scalable_kdeneur-ru.svg \
	hicolor_apps_16x16_kdeneur-se.png \
	hicolor_apps_22x22_kdeneur-se.png \
	hicolor_apps_24x24_kdeneur-se.png \
	hicolor_apps_32x32_kdeneur-se.png \
	hicolor_apps_48x48_kdeneur-se.png \
	hicolor_apps_scalable_kdeneur-se.svg \
	hicolor_apps_16x16_kdeneur-si.png \
	hicolor_apps_22x22_kdeneur-si.png \
	hicolor_apps_24x24_kdeneur-si.png \
	hicolor_apps_32x32_kdeneur-si.png \
	hicolor_apps_48x48_kdeneur-si.png \
	hicolor_apps_scalable_kdeneur-si.svg \
	hicolor_apps_16x16_kdeneur-sk.png \
	hicolor_apps_22x22_kdeneur-sk.png \
	hicolor_apps_24x24_kdeneur-sk.png \
	hicolor_apps_32x32_kdeneur-sk.png \
	hicolor_apps_48x48_kdeneur-sk.png \
	hicolor_apps_scalable_kdeneur-sk.svg \
	hicolor_apps_16x16_kdeneur-sr.png \
	hicolor_apps_22x22_kdeneur-sr.png \
	hicolor_apps_24x24_kdeneur-sr.png \
	hicolor_apps_32x32_kdeneur-sr.png \
	hicolor_apps_48x48_kdeneur-sr.png \
	hicolor_apps_scalable_kdeneur-sr.svg \
	hicolor_apps_16x16_kdeneur-ua.png \
	hicolor_apps_22x22_kdeneur-ua.png \
	hicolor_apps_24x24_kdeneur-ua.png \
	hicolor_apps_32x32_kdeneur-ua.png \
	hicolor_apps_48x48_kdeneur-ua.png \
	hicolor_apps_scalable_kdeneur-ua.svg \
	hicolor_apps_16x16_kdeneur-us.png \
	hicolor_apps_22x22_kdeneur-us.png \
	hicolor_apps_24x24_kdeneur-us.png \
	hicolor_apps_32x32_kdeneur-us.png \
	hicolor_apps_48x48_kdeneur-us.png \
	hicolor_apps_scalable_kdeneur-us.svg \
	hicolor_apps_16x16_kdeneur-uz.png \
	hicolor_apps_22x22_kdeneur-uz.png \
	hicolor_apps_24x24_kdeneur-uz.png \
	hicolor_apps_32x32_kdeneur-uz.png \
	hicolor_apps_48x48_kdeneur-uz.png \
	hicolor_apps_scalable_kdeneur-uz.svg \
	hicolor_apps_16x16_kdeneur-x3.png \
	hicolor_apps_22x22_kdeneur-x3.png \
	hicolor_apps_24x24_kdeneur-x3.png \
	hicolor_apps_32x32_kdeneur-x3.png \
	hicolor_apps_48x48_kdeneur-x3.png \
	hicolor_apps_scalable_kdeneur-x3.svg \
	$(NULL)

private_icons = \
	$(NULL)

noinst_DATA = \
	$(NULL)

###############################################################################

install-icons:
	for icon in $(public_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		mkdir -p $(DESTDIR)$(datadir)/icons/$$THEME/$$SIZE/$$CONTEXT; \
		$(INSTALL_DATA) $(srcdir)/$$icon $(DESTDIR)$(datadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done; \
	for icon in $(private_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		mkdir -p $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT; \
		$(INSTALL_DATA) $(srcdir)/$$icon $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

uninstall-icons:
	-for icon in $(public_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		rm -f $(DESTDIR)$(datadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done; \
	for icon in $(private_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		rm -f $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done


install-data-local: install-icons

uninstall-local: uninstall-icons

pixmapsdir = @datarootdir@/kdeneur/pixmaps
pixmaps_DATA =			\
	am.png			\
	bg.png			\
	by.png			\
	cz.png			\
	de.png			\
	en.png			\
	es.png			\
	ee.png			\
	fi.png			\
	fr.png			\
	ge.png			\
	gr.png			\
	kdeneur.png		\
	hr.png			\
	hu.png			\
	is.png			\
	it.png			\
	kz.png			\
	lt.png			\
	lv.png			\
	no.png			\
	pl.png			\
	pt.png			\
	ro.png			\
	se.png			\
	si.png			\
	sk.png			\
	sr.png			\
	ru.png			\
	ua.png			\
	us.png			\
	uz.png			\
	x3.png			

EXTRA_DIST = \
	$(public_icons)		\
	$(private_icons)	\
	$(noinst_DATA)		\
	$(pixmaps_DATA)		\
	$(NULL)
