pixmapsdir = @datarootdir@/xcurf/pixmaps
pixmaps_DATA =			\
	am.png			\
	bg.png			\
	by.png			\
	cz.png			\
	de.png			\
	en.png			\
	es.png			\
	ee.png			\
	fi.png			\
	fr.png			\
	ge.png			\
	gr.png			\
	hr.png			\
	hu.png			\
	is.png			\
	it.png			\
	kz.png			\
	lt.png			\
	lv.png			\
	no.png			\
	pl.png			\
	pt.png			\
	ro.png			\
	se.png			\
	si.png			\
	sk.png			\
	sr.png			\
	ru.png			\
	ua.png			\
	us.png			\
	uz.png

EXTRA_DIST = $(pixmaps_DATA)
