dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AC_PREREQ(2.59)
AC_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(gXNeur, 0.3)

CFLAGS="-Wall -Wextra -Werror -g0 -fPIC -std=gnu99"

AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_HEADER_STDC

PKG_CHECK_MODULES(GTK, [gtk+-2.0 gdk-2.0])

AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)
AC_SUBST(CFLAGS)

AC_OUTPUT([Makefile src/Makefile pixmaps/Makefile])

cat << EOF

$PACKAGE $VERSION configured successfully:

	Installing into:	$prefix

	Compiler flags:		$CFLAGS
	Linker flags:		$LDFLAGS

EOF
