dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AC_PREREQ(2.59)
AC_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(XNeur, 0.3)

CFLAGS="-Wall -Wextra -Werror -g0 -pedantic -fPIC -std=gnu99"

AC_PATH_XTRA
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_HEADER_STDC

if test "x$no_x" = "xyes"; then
	AC_MSG_ERROR([Can't locate your X11 installation])
fi

AC_SUBST(X_LIBS)
AC_SUBST(X_CFLAGS)
AC_SUBST(CFLAG)

AC_OUTPUT([etc/Makefile etc/en/Makefile etc/ru/Makefile lib/Makefile lib/ai/Makefile lib/config/Makefile lib/misc/Makefile lib/x/Makefile src/Makefile Makefile])

cat << EOF

$PACKAGE $VERSION configured successfully:

	Installing into:	$prefix
	Copying configs into:	$sysconfdir/xneur

	Compiler flags:		$CFLAGS
	Linker flags:		$LDFLAGS

	X11 compiler flags:	$X_CFLAGS
	X11 linker flags:	$X_LIBS

EOF
