dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AC_PREREQ(2.59)
AC_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(xneur, 0.5.0)

CFLAGS="-Wall -Werror -g0 -pedantic -fPIC -std=gnu99 `pcre-config --cflags` " 

AC_PATH_XTRA
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_HEADER_STDC

if test "x$no_x" = "xyes"; then
	AC_MSG_ERROR([Can't locate your X11 installation])
fi

AC_SUBST(X_LIBS)
AC_SUBST(X_CFLAGS)
AC_SUBST(CFLAG)

AC_OUTPUT([etc/Makefile etc/en/Makefile etc/ru/Makefile etc/uk/Makefile etc/be/Makefile lib/Makefile lib/ai/Makefile lib/config/Makefile lib/misc/Makefile lib/x/Makefile src/Makefile Makefile])

cat << EOF

$PACKAGE $VERSION configured successfully:

	Installing into:	$prefix

	Compiler flags:		$CFLAGS

	X11 compiler flags:	$X_CFLAGS
	X11 linker flags:	$X_LIBS

EOF
